[package]
name = "download-iglive"
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-or-later"

[profile.release]
strip = true

[dependencies]
alphanumeric-sort = "1.5"
anyhow = "1.0"
bitflags = "2.9"
clap = { version = "4.5", features = [ "derive" ] }
futures = "0.3"
indicatif = "0.18.0"
quick-xml = { version = "0.38", features = [ "serialize" ] }
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "2.0"
tokio = { version = "1.47", features = [ "full" ] }
